--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<div class="container">
+<!--		<div class="container">
 			<div class="box box-1">1</div>
 			<div class="box box-2">2</div>
 			<div class="box box-3">3</div>
@@ -18,6 +18,11 @@
 			<div class="box box-8">8</div>
 			<div class="box box-9">9</div>
 			<div class="box box-10">10</div>
-		</div>
+		</div>-->
+
+		<div class="container">
+			<div class="box box-1">one</div>
+			<div class="box box-2">two</div>
+				</div>
 	</body>
 </html>
