--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
 		<div class="container">
 			<div class="box box-1">one</div>
 			<div class="box box-2">two</div>
-				</div>
+			<div class="box box-3">three</div>
+			<div class="box box-4">four</div>
+			<div class="box box-5">five</div>
+			<div class="box box-6">six</div>
+			<div class="box box-1">one</div>
+			<div class="box box-2">two</div>
+			<div class="box box-3">three</div>
+			<div class="box box-4">four</div>
+			<div class="box box-5">five</div>
+			<div class="box box-6">six</div>
+		</div>
 	</body>
 </html>
