--- a/navbar/index.html
+++ b/navbar/index.html
@@ -2,23 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
-    <title>Title</title>
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="style.css">
+    <title>navBar</title>
 </head>
 <body>
-    <nav>
-      <div class="flex">
-        <div class="text">hola</div>
-        <div class="text">hola</div>
-        <div class="text">hola</div>
-        <div class="text">hola</div>
-        <div class="text">hola</div>
-        <div class="text">hola</div>
-        <div class="icons">a</div>
-        <div class="icons">a</div>
-        <div class="icons">a</div>
-        <div class="icons">a</div>
-      </div>
+    <div class="wrapper">
+    <nav class="flex-nav">
+      <ul class="flex-nav__ul">
+        <li class="flex-nav__ul--li"><a href="#">item 01</a></li>
+        <li class="flex-nav__ul--li"><a href="#">item 02</a></li>
+        <li class="flex-nav__ul--li"><a href="#">item 03</a></li>
+        <li class="flex-nav__ul--li"><a href="#">item 04</a></li>
+        <li class="flex-nav__ul--li"><a href="#">item 05</a></li>
+        <li class="flex-nav__ul--li"><a href="#">item 06</a></li>
+        <li class="social"><a target="_blank" href="https://github.com/JoaoCst21"><i class="bi bi-github"></i></a></li>
+        <li class="social"><a target="_blank" href="https://github.com/JoaoCst21"><i class="bi bi-facebook"></i></a></li>
+        <li class="social"><a target="_blank" href="https://github.com/JoaoCst21"><i class="bi bi-instagram"></i></i></a></li>
+        <li class="social"><a target="_blank" href="https://github.com/JoaoCst21"><i class="bi bi-twitter"></i></a></li>
+      </ul>
     </nav>
+    </div>
 </body>
 </html>
